# pretalx-media-ccc-de

./: MANIFEST.in  README.md  README.rst  data.json  justfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_4e13335c6e8ce1ac___init___py.html  z_4e13335c6e8ce1ac_apps_py.html  z_4e13335c6e8ce1ac_forms_py.html  z_4e13335c6e8ce1ac_models_py.html  z_4e13335c6e8ce1ac_recording_py.html  z_4e13335c6e8ce1ac_signals_py.html  z_4e13335c6e8ce1ac_tasks_py.html  z_4e13335c6e8ce1ac_views_py.html
pretalx_media_ccc_de/: __init__.py  apps.py  forms.py  models.py  recording.py  signals.py  tasks.py  urls.py  views.py
pretalx_media_ccc_de/locale/ar/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/ca/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/cs/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/de_DE/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/de_Formal/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/el/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/es/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/es_MX/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/fr_FR/LC_MESSAGES/: django.po
pretalx_media_ccc_de/locale/it/LC_MESSAGES/: django.po
pretalx_media_ccc_de/migrations/: 0001_initial.py  0002_populate_media_ccc_de.py
pretalx_media_ccc_de/templates/pretalx_media_ccc_de/: settings.html
tests/: conftest.py  test_main.py
(+12 files in other folders)
