[project]
name = "pretalx-media-ccc-de"
dynamic = ["version"]
description = "Pull recordings from media.ccc.de and embed them in talk pages."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/pretalx/pretalx-media-ccc-de"
repository = "https://github.com/pretalx/pretalx-media-ccc-de.git"

[project.entry-points."pretalx.plugin"]
pretalx_media_ccc_de = "pretalx_media_ccc_de:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_media_ccc_de.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [
  ".*",
]
